# ti

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
.claude/agents/: afk-runner.md
.github/workflows/: ci.yml
crates/ti-core/: Cargo.toml
crates/ti-core/src/: lib.rs  session.rs  snapshot.rs
crates/ti-daemon/: Cargo.toml
crates/ti-daemon/src/: lib.rs  main.rs  mcp_listener.rs  observer_socket.rs  registry.rs
crates/ti-daemon/tests/: mcp_integration.rs
docs/adr/: 0001-client-server-daemon.md  0002-rust-core-avt-emulator.md  0003-tcc-drives-app-bundle-launchagent.md  0004-mechanism-not-policy.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
