[workspace]
resolver = "2"
members = ["crates/ti-core", "crates/ti-daemon"]

[workspace.package]
version = "0.0.0"
edition = "2021"

# Shared dependency versions are declared here and referenced with
# `<dep>.workspace = true` from member crates, so versions stay in lockstep.
# Slices add entries as they need them (e.g. avt, portable-pty, the MCP SDK).
[workspace.dependencies]
ti-core = { path = "crates/ti-core" }
avt = "0.18.0"
portable-pty = "0.9.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
