[package]
name = "ti-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
ti-core.workspace = true
tokio.workspace = true
axum.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }
